--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "scripts": {
         "lint": "eslint .",
         "pretest": "npm run lint",
-        "test": "node ./test/runTest.js"
+        "test": "node ./test/runTest.js",
+        "watch": "tsc --watch"
     },
     "devDependencies": {
         "@types/glob": "^7.1.1",
@@ -68,7 +69,7 @@
         "eslint": "^6.8.0",
         "glob": "^7.1.6",
         "mocha": "^7.0.1",
-        "typescript": "^3.7.5",
+        "typescript": "^3.9.10",
         "vscode-test": "^1.3.0"
     }
 }
